# dependency-injector

./: .editorconfig  .gitattributes  .gitignore  BENCHMARK_COMPARISON.md  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  RUST_DI_COMPARISON.md  TODO.md  chunk-5YNCR4KS.js  chunk-7KLTO64Y.js  chunk-7V6GF7OO.js  chunk-C4FFNW2K.js  chunk-EHKFXQ57.js  chunk-GJGXC27G.js  chunk-I3MUY3VT.js  chunk-M4BHDGF3.js  chunk-MXRDCWOD.js  chunk-OETYPKPZ.js  chunk-RE44EMUJ.js  chunk-TG3PH4KR.js  chunk-V42HK4PN.js  chunk-VBONCSWP.js  chunk-VHTWP45A.js  chunk-WQ4ZTVER.js  chunk-XML5AIGG.js  chunk-Z3U4FASX.js  chunk-Z7MP6CVX.js  chunk-ZC65NPOD.js  index.html  main-BOE46XGF.js  main-P5PVXTYT.js  styles-5JKBIL4G.css  styles-QDZ6BQNO.css
.cargo-husky/hooks/: commit-msg  pre-commit  pre-push
.cursor/agents/: docs-writer.md  performance-optimizer.md  release-manager.md  rust-di-expert.md  test-engineer.md
.cursor/rules/: angular-docs.mdc  api-designer.mdc  benchmarking.mdc  ci-cd.mdc  commit-conventions.mdc  derive-macros.mdc  docs-writer.mdc  error-handling.mdc  examples.mdc  git-workflow.mdc  performance.mdc  publishing.mdc  release-manager.mdc  rust-conventions.mdc  rust-di-expert.mdc  security-auditor.mdc  testing.mdc
.github/: FUNDING.yml  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  bench.yml  build-native.yml  build-nuget.yml  build-python-wheels.yml  ci.yml  gh-pages.yml  release.yml
benches/: comparison_bench.rs  container_bench.rs
benchmarks/csharp-comparison/: Program.cs  csharp-comparison.csproj
benchmarks/go-comparison/: di_bench_test.go  go.mod  go.sum
benchmarks/nodejs-comparison/: package.json  tsconfig.json
benchmarks/nodejs-comparison/src/: benchmark.ts
benchmarks/python-comparison/: benchmark.py
dependency-injector-derive/: .gitignore  Cargo.toml  README.md
dependency-injector-derive/src/: lib.rs
docs/: angular.json  index.html  package.json  pnpm-lock.yaml
docs/public/: robots.txt  site.webmanifest  sitemap.xml
docs/src/: index.html  styles.scss
docs/src/app/: app.config.ts  app.routes.ts  app.scss  app.ts
docs/src/app/components/code-block/: code-block.html  code-block.scss  code-block.ts
docs/src/app/components/footer/: footer.html  footer.scss  footer.ts
docs/src/app/components/header/: header.html  header.scss  header.ts
docs/src/app/data/: code-snippets.ts
docs/src/app/pages/benchmarks/: benchmarks.html  benchmarks.scss  benchmarks.ts
docs/src/app/pages/docs/api/: api.html  api.scss  api.ts
docs/src/app/pages/docs/examples/: examples.html  examples.scss  examples.ts
docs/src/app/pages/docs/ffi/: ffi.html  ffi.scss  ffi.ts
docs/src/app/pages/docs/getting-started/: getting-started.html  getting-started.scss  getting-started.ts
docs/src/app/pages/docs/guide/: guide.html  guide.scss  guide.ts
docs/src/app/pages/home/: home.html  home.scss  home.ts
docs/src/app/services/: benchmark.service.ts  seo.service.ts
examples/: derive.rs  logging.rs  memory_profiler.rs
ffi/: README.md  dependency_injector.h
ffi/csharp/: DependencyInjector.sln  README.md
ffi/csharp/DependencyInjector/: Container.cs  DependencyInjector.csproj  NativeBindings.cs  NativeLibraryResolver.cs
ffi/csharp/DependencyInjector.Tests/: ContainerTests.cs  DependencyInjector.Tests.csproj
ffi/csharp/Example/: Example.csproj  Program.cs
ffi/go/: README.md
ffi/go/di/: di.go  di_test.go  go.mod
ffi/go/example/: go.mod  main.go
ffi/nodejs/: .npmignore  .swcrc  README.md  package.json  pnpm-lock.yaml  tsconfig.json
ffi/nodejs/examples/: basic.ts
ffi/nodejs/scripts/: install.js
ffi/nodejs/src/: index.test.ts  index.ts
ffi/python/: MANIFEST.in  README.md  pyproject.toml
ffi/python/dependency_injector/: __init__.py  container.py  py.typed
ffi/python/examples/: basic.py
ffi/python/scripts/: __init__.py  download_native.py
ffi/python/tests/: test_container.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_concurrent.rs  fuzz_container.rs  fuzz_lifecycle.rs  fuzz_scoped.rs
scripts/: deploy-ffi.sh  deploy.sh  publish.sh
src/: container.rs  error.rs  factory.rs  ffi.rs  lib.rs  logging.rs  provider.rs  scope.rs  storage.rs  typed.rs  verified.rs
