[package]
name = "dependency-injector"
version = "0.2.2"
edition = "2024"
rust-version = "1.85"
description = "High-performance, lock-free dependency injection container for Rust"
license = "MIT OR Apache-2.0"
keywords = ["dependency-injection", "di", "ioc", "container", "service-locator"]
categories = ["development-tools", "rust-patterns", "concurrency"]
readme = "README.md"
repository = "https://github.com/pegasusheavy/dependency-injector"
documentation = "https://docs.rs/dependency-injector"

# Files to exclude from crates.io publish
exclude = [
    # Development tooling
    ".cursor/",
    ".github/",
    ".vscode/",
    ".idea/",
    ".cargo-husky/",

    # Documentation site (Angular)
    "docs/",

    # FFI bindings (published separately)
    "ffi/",

    # Benchmarks
    "benches/",
    "benchmarks/",
    "*.bench.rs",
    "BENCHMARK_COMPARISON.md",
    "RUST_DI_COMPARISON.md",

    # Examples (keep in crate, but exclude extras)
    "examples/memory_profiler.rs",

    # Scripts
    "scripts/",

    # Profiling artifacts
    "*.profraw",
    "*.profdata",
    "dhat-heap.json",
    "flamegraph.svg",

    # CI/CD
    ".gitignore",
    ".gitattributes",
    "codecov.yml",
    "rustfmt.toml",
    "clippy.toml",
    ".editorconfig",

    # Misc development files
    "TODO.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "*.bak",
    "*.orig",
]

# Note: For FFI shared library builds, use:
#   cargo rustc --release --features ffi --crate-type cdylib

[features]
default = ["logging"]
# Enable debug logging (recommended)
logging = ["dep:tracing"]
# Pretty console output (for development)
logging-pretty = ["logging", "dep:tracing-subscriber"]
# JSON structured logging (for production)
logging-json = ["logging", "dep:tracing-subscriber", "tracing-subscriber/json"]
# Legacy alias
tracing = ["logging"]
# Async support
async = ["dep:tokio"]
# Derive macros for automatic injection
derive = ["dep:dependency-injector-derive"]
# Perfect hashing for locked containers (~5ns faster resolution)
perfect-hash = ["dep:boomphf"]
# Heap profiling with dhat (for memory leak detection)
dhat-heap = ["dep:dhat"]
# FFI bindings for C/Go/Python interop
ffi = []

[dependencies]
# Lock-free concurrent hashmap - much faster than RwLock<HashMap>
dashmap = "6"

# Faster hashing for TypeId keys
ahash = "0.8"

# Thread-safe lazy initialization
once_cell = "1.19"

# Error handling
thiserror = "2.0"

# Structured logging (optional)
tracing = { version = "0.1", optional = true }

# Log subscriber for formatting (optional)
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Optional async support
tokio = { version = "1.0", features = ["sync"], optional = true }

# Derive macros (optional)
dependency-injector-derive = { version = "0.1.0", path = "dependency-injector-derive", optional = true }

# Minimal perfect hashing for locked containers (optional)
boomphf = { version = "0.6", optional = true }

# Heap profiler for memory leak detection (optional)
dhat = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
criterion = { version = "0.5", features = ["html_reports"] }  # Pin to 0.8 for Rust 1.85 compatibility

# External DI crates for comparison benchmarks
shaku = "0.6"
ferrous-di = "0.2"

[[bench]]
name = "container_bench"
harness = false

[[bench]]
name = "comparison_bench"
harness = false

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

# Profile for memory profiling - optimized but with debug info
[profile.profiling]
inherits = "release"
debug = true
strip = false

# Profile for AddressSanitizer/LeakSanitizer builds
[profile.sanitizer]
inherits = "dev"
opt-level = 1

[[example]]
name = "memory_profiler"
path = "examples/memory_profiler.rs"

[[example]]
name = "derive"
path = "examples/derive.rs"
required-features = ["derive"]

[[example]]
name = "logging"
path = "examples/logging.rs"
required-features = ["logging"]
