[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dependency-injector-rust"
version = "0.2.2"
description = "Python bindings for the high-performance Rust dependency injection container"
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Pegasus Heavy Industries"}
]
keywords = ["dependency-injection", "di", "ioc", "container", "rust", "ffi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/pegasusheavy/dependency-injector"
Documentation = "https://docs.rs/dependency-injector"
Repository = "https://github.com/pegasusheavy/dependency-injector"
Issues = "https://github.com/pegasusheavy/dependency-injector/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dependency_injector*"]

[tool.setuptools.package-data]
dependency_injector = [
    "native/*.so",
    "native/*.dylib",
    "native/*.dll",
    "py.typed",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

